...
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="8rJ-Kc-sve" id="axE-r5-k3n"/>
                                    <outlet property="delegate" destination="8rJ-Kc-sve" id="cTB-Rx-joG"/>
                                </connections>
                            </tableView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shopping Basket" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQR-YR-uPn">
                                <rect key="frame" x="24" y="28" width="343" height="41"/>
                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KbC-CV-7d0">
                                <rect key="frame" x="114.5" y="557" width="145" height="53"/>
                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
                                <state key="normal" title="Checkout"/>
                                <connections>
                                    <segue destination="Khz-PC-hiC" kind="popoverPresentation" identifier="presentCheckout" popoverAnchorView="KbC-CV-7d0" id="d4C-Qu-qpw">
                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                    </segue>
                                </connections>
                            </button>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nUc-Qs-RwI">
                                <rect key="frame" x="8" y="599" width="93" height="48"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <state key="normal" title="Cancel">
                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="cancel:" destination="Khz-PC-hiC" eventType="touchUpInside" id="A02-nO-40M"/>
                                </connections>
                            </button>
...
            </objects>
            <point key="canvasLocation" x="0.0" y="0.0"/>
        </scene>
        <!--Inventory-->
        <scene sceneID="DMw-A3-Dmf">
            <objects>
                <tableViewController id="yCr-pL-OOs" userLabel="Inventory" customClass="InventoryTableViewController" customModule="E5" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="88" sectionHeaderHeight="28" sectionFooterHeight="28" id="Dsx-QW-Le5">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="InventoryTableViewCell" rowHeight="80" id="dZC-r7-qaF" customClass="InventoryTableViewCell" customModule="E5" customModuleProvider="target">
...
